--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
       </div>
 
       <!-- Formspree Contact Form -->
-      <form data-aos="fade-left" action="https://formspree.io/f/xpwjdqaz" method="POST">
+      <form id="contactForm" data-aos="fade-left" action="https://formspree.io/f/xpwjdqaz" method="POST">
         <div class="field">
           <input type="text" name="name" placeholder="اسمك" required>
         </div>
@@ -296,11 +296,47 @@
           <textarea name="message" rows="5" placeholder="رسالتك" required></textarea>
         </div>
         <button class="btn btn-primary" type="submit">إرسال الرسالة</button>
+        <p id="formMessage" style="margin-top:10px; color:green; display:none;">تم إرسال رسالتك بنجاح ✅</p>
       </form>
 
     </div>
   </div>
 </section>
+
+<script>
+  const form = document.getElementById('contactForm');
+  const formMessage = document.getElementById('formMessage');
+
+  form.addEventListener('submit', function(e) {
+    e.preventDefault(); // يمنع إعادة تحميل الصفحة
+    const formData = new FormData(form);
+
+    fetch(form.action, {
+      method: form.method,
+      body: formData,
+      headers: { 'Accept': 'application/json' }
+    })
+    .then(response => {
+      if (response.ok) {
+        formMessage.style.display = 'block';
+        form.reset();
+      } else {
+        response.json().then(data => {
+          if (data.errors) {
+            formMessage.style.display = 'block';
+            formMessage.style.color = 'red';
+            formMessage.textContent = 'حدث خطأ، يرجى المحاولة مرة أخرى.';
+          }
+        })
+      }
+    })
+    .catch(error => {
+      formMessage.style.display = 'block';
+      formMessage.style.color = 'red';
+      formMessage.textContent = 'حدث خطأ، يرجى المحاولة مرة أخرى.';
+    });
+  });
+</script>
 
   <!-- Footer -->
   <footer>
@@ -625,4 +661,5 @@
     })();
   </script>
 </body>
+
 </html>
