--- a/index.html
+++ b/index.html
@@ -339,21 +339,59 @@
   });
 </script>
 
-
-  <!-- Footer -->
-  <footer>
-    <div class="container">
-      <h3 id="fName">محمد الشرقاوى</h3>
-      <p id="fTitle">مصمم جرافيك ومسوق إلكتروني</p>
-      <div class="social">
-        <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" aria-label="Twitter/X"><i class="fab fa-x-twitter"></i></a>
-        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-      </div>
-      <p>جميع الحقوق محفوظة © <span id="year"></span></p>
+ <!-- Footer -->
+<footer>
+  <div class="container">
+    <h3 id="fName">محمد الشرقاوى</h3>
+    <p id="fTitle">مصمم جرافيك ومسوق إلكتروني</p>
+    <div class="social">
+      <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook" class="facebook"><i class="fab fa-facebook-f"></i></a>
+      <a href="https://twitter.com/" target="_blank" aria-label="Twitter/X" class="twitter"><i class="fab fa-x-twitter"></i></a>
+      <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram" class="instagram"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/" target="_blank" aria-label="LinkedIn" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
     </div>
-  </footer>
+    <p>جميع الحقوق محفوظة © <span id="year"></span></p>
+  </div>
+</footer>
+
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-papJHlLzGsvZHe8eVf1P7vN39P9ZfIqZpI0aGg3LHp3cz2dWjXk3FvHhOXmEdn0r1HlZC1UB6zD0H+0Dh7Y2dg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<style>
+  footer {
+    background: #111;
+    color: #fff;
+    padding: 40px 0;
+    text-align: center;
+  }
+
+  footer .social a {
+    display: inline-block;
+    margin: 0 10px;
+    color: #fff;
+    font-size: 22px;
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+  }
+
+  /* ألوان كل شبكة اجتماعية */
+  .social a.facebook:hover { background: #1877f2; color: #fff; transform: translateY(-5px);}
+  .social a.twitter:hover { background: #1da1f2; color: #fff; transform: translateY(-5px);}
+  .social a.instagram:hover { background: #c32aa3; color: #fff; transform: translateY(-5px);}
+  .social a.linkedin:hover { background: #0a66c2; color: #fff; transform: translateY(-5px);}
+
+  footer #year {
+    font-weight: bold;
+  }
+</style>
+
+<script>
+  // تحديث السنة تلقائي
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
 
   <!-- Floating elements -->
   <div class="to-top" id="toTop" title="للأعلى"><i class="fas fa-arrow-up"></i></div>
@@ -665,4 +703,5 @@
 </body>
 
 </html>
+
 
