--- a/index.html
+++ b/index.html
@@ -345,17 +345,17 @@
     <h3 id="fName">محمد الشرقاوى</h3>
     <p id="fTitle">مصمم جرافيك ومسوق إلكتروني</p>
     <div class="social">
-      <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook" class="facebook"><i class="fab fa-facebook-f"></i></a>
-      <a href="https://twitter.com/" target="_blank" aria-label="Twitter/X" class="twitter"><i class="fab fa-x-twitter"></i></a>
-      <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram" class="instagram"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.linkedin.com/" target="_blank" aria-label="LinkedIn" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+      <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook" class="facebook"><i class="fa-brands fa-facebook-f"></i></a>
+      <a href="https://twitter.com/" target="_blank" aria-label="Twitter/X" class="twitter"><i class="fa-brands fa-twitter"></i></a>
+      <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram" class="instagram"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/" target="_blank" aria-label="LinkedIn" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
     </div>
     <p>جميع الحقوق محفوظة © <span id="year"></span></p>
   </div>
 </footer>
 
-<!-- Font Awesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-papJHlLzGsvZHe8eVf1P7vN39P9ZfIqZpI0aGg3LHp3cz2dWjXk3FvHhOXmEdn0r1HlZC1UB6zD0H+0Dh7Y2dg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!-- تحميل Font Awesome من CDN -->
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 <style>
   footer {
@@ -377,7 +377,6 @@
     transition: all 0.3s ease;
   }
 
-  /* ألوان كل شبكة اجتماعية */
   .social a.facebook:hover { background: #1877f2; color: #fff; transform: translateY(-5px);}
   .social a.twitter:hover { background: #1da1f2; color: #fff; transform: translateY(-5px);}
   .social a.instagram:hover { background: #c32aa3; color: #fff; transform: translateY(-5px);}
@@ -392,6 +391,7 @@
   // تحديث السنة تلقائي
   document.getElementById("year").textContent = new Date().getFullYear();
 </script>
+
 
   <!-- Floating elements -->
   <div class="to-top" id="toTop" title="للأعلى"><i class="fas fa-arrow-up"></i></div>
@@ -703,5 +703,6 @@
 </body>
 
 </html>
+
 
 
