--- a/index.html
+++ b/index.html
@@ -276,13 +276,18 @@
   <div class="container">
     <h2 class="title">معلومات <span style="background:linear-gradient(90deg,var(--primary),var(--secondary));-webkit-background-clip:text;-webkit-text-fill-color:transparent">التواصل</span></h2>
     <div class="wrap">
-      <div class="info" data-aos="fade-right">
-        <h3>ابقَ على تواصل</h3>
-        <div class="row"><i class="fas fa-phone"></i><span id="cPhone">01020990234</span></div>
-        <div class="row"><i class="fas fa-envelope"></i><span id="cEmail">moelsharkawy03@gmail.com</span></div>
-        <div class="row"><i class="fas fa-map-marker-alt"></i><span id="cAddress">البحيرة ، مصر</span></div>
-        <div class="row"><i class="fab fa-whatsapp"></i><span id="cWhats">01020990234</span></div>
-      </div>
+      <!-- Info Section -->
+<div class="info" data-aos="fade-right">
+  <h3>ابقَ على تواصل</h3>
+  <div class="row"><i class="fas fa-phone"></i><span id="cPhone">01020990234</span></div>
+  <div class="row">
+    <i class="fab fa-whatsapp"></i>
+    <a href="https://wa.me/201020990234" target="_blank" style="color:inherit; text-decoration:none;">
+      01020990234
+    </a>
+  </div>
+</div>
+
 
       <!-- Formspree Contact Form -->
       <form id="contactForm" data-aos="fade-left" action="https://formspree.io/f/xpwjdqaz" method="POST">
@@ -703,6 +708,7 @@
 </body>
 
 </html>
+
 
 
 
