--- a/index.html
+++ b/index.html
@@ -275,18 +275,16 @@
 <section class="contact" id="contact">
   <div class="container">
     <h2 class="title">معلومات <span style="background:linear-gradient(90deg,var(--primary),var(--secondary));-webkit-background-clip:text;-webkit-text-fill-color:transparent">التواصل</span></h2>
-    <div class="wrap">
-      <!-- Info Section -->
-<div class="info" data-aos="fade-right">
-  <h3>ابقَ على تواصل</h3>
-  <div class="row"><i class="fas fa-phone"></i><span id="cPhone">01020990234</span></div>
-  <div class="row">
-    <i class="fab fa-whatsapp"></i>
-    <a href="https://wa.me/201020990234" target="_blank" style="color:inherit; text-decoration:none;">
-      01020990234
-    </a>
-  </div>
+    <div class="row">
+  <i class="fas fa-phone"></i>
+  <span id="cPhone">01020990234</span>
 </div>
+<div class="row" style="margin-top:5px;">
+  <a href="https://wa.me/201020990234" target="_blank" style="color:#25D366; font-size:20px; text-decoration:none;">
+    <i class="fab fa-whatsapp"></i> تواصل عبر واتساب
+  </a>
+</div>
+
 
 
       <!-- Formspree Contact Form -->
@@ -708,6 +706,7 @@
 </body>
 
 </html>
+
 
 
 
